6946: There should be an option to build the agent in the build script
Reviewed-by: hirt, aptmac